--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "keycloak-js": "^26.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-jwt": "^1.2.2"
+    "react-jwt": "^1.2.2",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/keycloak-js": "^3.4.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
