--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_KC_URL=<Your Keycloak server URL>
-VITE_KC_REALM=<Your Keycloak Realm>
-VITE_KC_CLIENT_ID=<Your Keycloak Client ID>
-VITE_REACT_APP_URL=<Your Frontend URL>
+VITE_BACKEND_URL=http://localhost:8091/api
+VITE_KC_URL=http://localhost:8180
+VITE_KC_REALM=banditgames
+VITE_KC_CLIENT_ID=banditgames-frontend
+VITE_API_URL=http://localhost:8091
