--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@tanstack/react-query-devtools": "^5.61.3",
     "axios": "^1.7.7",
-    "keycloak-js": "^26.0.5",
+    "keycloak-js": "^26.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-jwt": "^1.2.2",
-    "react-router-dom": "^6.28.0"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^7.0.1",
+    "routes": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tanstack/react-query": "^5.61.3",
     "@types/keycloak-js": "^3.4.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -37,6 +41,6 @@
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.11"
   }
 }
