--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.8",
+    "@mui/x-date-pickers": "^7.23.1",
     "@tanstack/react-query-devtools": "^5.61.3",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "keycloak-js": "^26.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
