--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.2.0",
+    "@mui/x-data-grid": "^7.23.2",
     "@mui/x-date-pickers": "^7.23.1",
     "@tanstack/react-query-devtools": "^5.61.3",
     "axios": "^1.7.7",
