--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.2.0",
     "@mui/x-date-pickers": "^7.23.1",
-    "@tanstack/react-query-devtools": "^5.61.3",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query-devtools": "^5.62.8",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "keycloak-js": "^26.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-jwt": "^1.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@tanstack/react-query": "^5.61.3",
     "@types/keycloak-js": "^3.4.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
