--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
     "@mui/x-date-pickers": "^7.23.1",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "keycloak-js": "^26.0.6",
     "react": "^18.3.1",
+    "@eslint/js": "^9.13.0",
+    "@types/keycloak-js": "^3.4.1",
+    "@types/react": "^18.3.12",
     "react-dom": "^18.3.1",
     "react-jwt": "^1.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "routes": "^2.1.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "typescript": "~5.6.2", 
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.3",
+      "vite": "^5.4.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/keycloak-js": "^3.4.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -43,8 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.11"
+    "typescript-eslint": "^8.11.0"
+
   }
 }
