--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@eslint/js": "^9.13.0",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.2.0",
+    "@mui/x-data-grid": "^7.23.3",
     "@mui/x-date-pickers": "^7.23.1",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
+    "@types/keycloak-js": "^3.4.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "keycloak-js": "^26.0.6",
     "react": "^18.3.1",
-    "@eslint/js": "^9.13.0",
-    "@types/keycloak-js": "^3.4.1",
-    "@types/react": "^18.3.12",
     "react-dom": "^18.3.1",
     "react-jwt": "^1.2.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.1",
     "routes": "^2.1.0",
-    "yup": "^1.6.1",
-    "typescript": "~5.6.2", 
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.3",
-      "vite": "^5.4.11"
+    "typescript": "~5.6.2",
+    "vite": "^5.4.11",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "^9.13.0",
@@ -46,6 +47,5 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.11.0"
-
   }
 }
