--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,13 @@ variables:
   API_TOKEN: $DEPLOYMENT_TOKEN
   APP_PATH: '$CI_PROJECT_DIR'
   OUTPUT_PATH: '$CI_PROJECT_DIR/dist'
+  APP_BUILD_COMMAND: |
+    echo "Generating .env file with CI/CD environment variables..." && \
+    echo "VITE_KC_URL=$KC_URL" > .env && \
+    echo "VITE_KC_REALM=$KC_REALM" >> .env && \
+    echo "VITE_KC_CLIENT_ID=$KC_CLIENT_ID" >> .env && \
+    echo "VITE_API_URL=$API_URL" >> .env && \
+    npm run build
 
 before_script:
   - echo "Starting pipeline..."
@@ -45,6 +52,8 @@ build_project:
 
 deploy:
   stage: deploy
+  dependencies:
+    - build_project
   image: registry.gitlab.com/static-web-apps/azure-static-web-apps-deploy
   script:
     - echo "App deployed successfully."
