--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,4 +55,5 @@ deploy:
   dependencies:
     - build_project
   image: registry.gitlab.com/static-web-apps/azure-static-web-apps-deploy
-
+  script:
+    - /bin/sh -c "echo 'Starting deployment...'"
