--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,5 +57,6 @@ deploy:
     - build_project
   image: registry.gitlab.com/static-web-apps/azure-static-web-apps-deploy
   script:
-    - cd .
-    - /bin/bash -c "echo 'Starting deployment...'"
+    - echo 'Finished deployment'
+  only:
+    - main
