--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,8 +1,11 @@
 {
-    "routes": [
-      {
-        "route": "/*",
-        "rewrite": "/index.html"
+    "navigationFallback": {
+        "rewrite": "index.html",
+        "exclude": ["*.{svg,png,jpg,gif}","*.{css,scss}","*.js"]
+      }, 
+      "responseOverrides": {
+      "404": {
+        "rewrite": "index.html"
       }
-    ]
-  }
+    }
+}
