--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,3 +58,5 @@ deploy:
   image: registry.gitlab.com/static-web-apps/azure-static-web-apps-deploy
   script:
     - echo 'Finished deployment'
+  only:
+    - main
