--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^6.2.0",
     "@mui/x-data-grid": "^7.23.3",
     "@mui/x-date-pickers": "^7.23.1",
+    "@nivo/bar": "^0.88.0",
+    "@nivo/core": "^0.88.0",
+    "@nivo/line": "^0.88.0",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
     "@types/keycloak-js": "^3.4.1",
